# zappy

./: .clang-format  .clangd  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  devenv.nix  play.sh  run_ai.sh  zappy_server_rust
ai/: CMakeLists.txt  Dev.md  README.md  client.py  evaluate_heuristic.py  example.env  requirements.txt  run_bots.sh
ai/docs/: Dev.md  training_log.md  training_plan.md
ai/src/: __init__.py  main.py
ai/src/client/: __init__.py  ai_client.py  commands.py  lib_client.py
ai/src/env/: ZappyEnv.py  server_manager.py  train.py
ai/src/network/: connection.py
ai/src/strategy/: __init__.py  decision_making.py  llm_strategy.py  manual_mode.py  run_strategy.py  state_machine.py
ai/src/utils/: __init__.py  cmd_helpers.py  data.py  inventory.py  level_up.py  logging_levels.py  manual_cmd.py
ai/tests/: test_broadcast.py  test_client.py  test_commands.py  test_connect_nbr.py  test_decision_making.py  test_eject.py  test_env.py  test_fork.py  test_incantation.py  test_inventory.py  test_look.py  test_manual_mode.py  test_movement.py  test_server_manager.py  test_take_set.py
ai/training/: run_training.sh
ai/training/results/: eval_20260627_134417_zappy_survival_v1_r1.md  eval_20260627_134637_zappy_level2_v1_r1.md  eval_20260627_142019_zappy_level2_v1_r2.md  eval_20260627_145555_zappy_level2_v1_r2.md  eval_20260627_151904.md  eval_20260627_153033.md  eval_20260627_154847.md  eval_20260627_161540.md  eval_20260627_164313.md  eval_20260627_170407.md  eval_20260627_172539.md  eval_20260627_172603.md  eval_20260627_173747.md  eval_20260627_174335.md  eval_20260627_181943.md  eval_20260627_184250.md  eval_20260627_184331.md  eval_20260627_193309.md  eval_20260627_200328.md  eval_20260627_200830.md  eval_20260627_205408.md  eval_20260627_220735.md  eval_20260627_221154.md  eval_20260627_221213.md  eval_20260627_221423.md  eval_20260627_221453.md  eval_20260627_221504.md  eval_20260627_221611.md  eval_20260627_221617.md  eval_20260627_221621.md  eval_20260627_222149.md  eval_20260627_222153.md  eval_20260627_222155.md  eval_20260627_222158.md  eval_20260627_222201.md  eval_20260627_222204.md  eval_20260627_222208.md  eval_20260627_222211.md  eval_20260628_003412.md  eval_20260628_121953.md  (+49 more)
ai/training/training_env/: ZappyEnv.py  actions.py  broadcast.py  env_modes.py  evaluate_ai.py  server_manager.py  train.py  watch_ai.py
gui/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
gui/include/: AElement.hpp  ComponentEntity.hpp  Core.hpp  CoreErrors.hpp  IElement.hpp  NetworkManager.hpp
gui/include/Commands/: ACommand.hpp  AResourceCommand.hpp  CommandEggConnection.hpp  CommandEggDeath.hpp  CommandEggLayed.hpp  CommandGameEnd.hpp  CommandGetMapEvent.hpp  CommandIncantationEnd.hpp  CommandIncantationStart.hpp  CommandMapContent.hpp  CommandMapEvent.hpp  CommandMapSize.hpp  CommandPlayerBroadcast.hpp  CommandPlayerConnection.hpp  CommandPlayerDeath.hpp  CommandPlayerExpulsion.hpp  CommandPlayerFork.hpp  CommandPlayerInventory.hpp  CommandPlayerLevel.hpp  CommandPlayerPosition.hpp  CommandResourceCollect.hpp  CommandResourceDrop.hpp  CommandServerMessage.hpp  CommandTeamNames.hpp  CommandTileContent.hpp  CommandTimeUpdate.hpp  CommandTriggerMapEvent.hpp  CommandUnknown.hpp  CommandsErrors.hpp  FactoryCommands.cpp  FactoryCommands.hpp
gui/include/Components/: ComponentBot.hpp  ComponentIncantationEffect.hpp  ComponentInhabitant.hpp  ComponentItem.hpp  ComponentMusic.hpp  ComponentParticleEmitter.hpp  ComponentShared.hpp  ComponentTags.hpp  ComponentTile.hpp  FollowingEntity.hpp
gui/include/ECS/: ComponentMap.hpp  Entity.hpp  IComponentStorage.hpp  Register.hpp  World.hpp
gui/include/Graphics/: AssetManager.hpp  GraphicsErrors.hpp  Music.hpp  Particle.hpp  TileTextures.hpp  VoxelBatcher.hpp
gui/include/Logging/: ChatLogs.hpp  LogConfig.hpp  Logger.hpp
gui/include/Network/: NetworkErrors.hpp  TcpSocket.hpp
gui/include/Systems/: AnimationSystem.hpp  BackgroundSystem.hpp  MusicSystem.hpp  ParticleSystem.hpp  RenderSystem.hpp  SimulationSystem.hpp
gui/include/UI/: AUIComponent.hpp  IUIComponent.hpp  UIButton.hpp  UIChatPanel.hpp  UIEvent.hpp  UIEventMenu.hpp  UIHudPanel.hpp  UIInput.hpp  UIManager.hpp  UIPanel.hpp  UIRadio.hpp  UIScoreboardPanel.hpp  UISlider.hpp  UIText.hpp
gui/include/Utils/: UtilsErrors.hpp
gui/include/errors/: AError.hpp  IError.hpp
gui/src/: AElement.cpp  Core.cpp  CoreUI.cpp  CoreUpdate.cpp  NetworkManager.cpp  main.cpp
gui/src/Commands/: FactoryCommands.cpp
gui/src/Graphics/: AssetManager.cpp  AssetManagerAnimations.cpp  AssetManagerShaders.cpp  VoxelBatcher.cpp
gui/src/Network/: TcpSocket.cpp
gui/src/Systems/: AnimationSystem.cpp  BackgroundSystem.cpp  MusicSystem.cpp  ParticleSystem.cpp  RenderSystem.cpp  RenderSystemBatches.cpp  RenderSystemBatches.hpp  RenderSystemEffects.cpp  RenderSystemEntities.cpp  RenderSystemResources.cpp  RenderSystemTerrain.cpp  SimulationSystem.cpp
gui/src/UI/: AUIComponent.cpp  UIButton.cpp  UIChatPanel.cpp  UIEventMenu.cpp  UIHudPanel.cpp  UIInput.cpp  UIManager.cpp  UIPanel.cpp  UIRadio.cpp  UIScoreboardPanel.cpp  UISlider.cpp  UIText.cpp
gui/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_asset_manager.cpp  test_core.cpp  test_ecs.cpp  test_egg.cpp  test_incantation.cpp  test_misc.cpp  test_network.cpp  test_particle_system.cpp  test_player.cpp  test_render_system.cpp  test_resources.cpp  test_simulation_system.cpp  test_team.cpp  test_ui.cpp
server/: CMakeLists.txt  Cargo.toml  DOCS.md  Makefile  README.md  cmake_install.cmake
server/docs/: main.typ  template.typ
server/src/: commands.rs  common.rs  ecs.rs  ffi.rs  game.rs  lib.rs  main.rs  server.rs  utils.rs
server/src/cli/: client.rs  commands.rs  main.rs
server/src/commands/: ai.rs  gev.rs  gui.rs  gui_sync.rs  ppo.rs
server/src/common/: channel.rs  client.rs  date.rs  message.rs  player.rs  protocol.rs  team.rs  thread.rs  user.rs  utils.rs
server/src/ecs/: builders.rs  components.rs  map_events.rs  (+3 more)
(+163 files in other folders)
