[package]
name = "myteams"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.29", features = ["poll", "net"] }

# Source - https://stackoverflow.com/a/36604610
# Posted by Dogbert, modified by community. See post 'Timeline' for change history
# Retrieved 2026-03-24, License - CC BY-SA 4.0
[[bin]]
name = "myteams_cli"
path = "src/cli/main.rs"

[[bin]]
name = "myteams_server"
path = "src/server/main.rs"
